crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__merge_styles__merge_styles-11.snap
---
source: crates/oxvg_optimiser/src/jobs/merge_styles.rs
expression: "test_config(r#\"{ \"mergeStyles\": true }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- Skip styles inside foreignObject -->\n    <foreignObject>\n        <style>\n        .st0 { fill: yellow; }\n        </style>\n    </foreignObject>\n    <style>\n        .st1 { fill: red; }\n    </style>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- Skip styles inside foreignObject -->
    <foreignObject>
        <style>
        .st0 { fill: yellow; }
        </style>
    </foreignObject>
    <style>.st1 { fill: red; }</style>
</svg>
