crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__merge_styles__merge_styles-9.snap
---
source: crates/oxvg_optimiser/src/jobs/merge_styles.rs
expression: "test_config(r#\"{ \"mergeStyles\": true }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- Should handle type attribute -->\n    <style>\n        .a { fill: blue; }\n    </style>\n    <style type=\"\">\n        .b { fill: green; }\n    </style>\n        <style type=\"text/css\">\n        .c { fill: red; }\n    </style>\n    <style type=\"text/invalid\">\n        .d { fill: blue; }\n    </style>\n    <rect width=\"100\" height=\"100\" class=\"st0\" style=\"stroke-width:3;margin-top:1em;margin-right:1em;margin-bottom:1em;margin-left:1em\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- Should handle type attribute -->
    <style>
        .a{fill:#00f}.b{fill:green}.c{fill:red}
    </style>
    <style type="text/invalid">
        .d { fill: blue; }
    </style>
    <rect width="100" height="100" class="st0" style="stroke-width:3px;margin-top:1em;margin-right:1em;margin-bottom:1em;margin-left:1em"/>
</svg>
