crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__merge_styles__merge_styles.snap
---
source: crates/oxvg_optimiser/src/jobs/merge_styles.rs
expression: "test_config(r#\"{ \"mergeStyles\": true }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- No changes needed when there's only one style element -->\n    <style>\n        .st0{ fill:red; padding-top: 1em; padding-right: 1em; padding-bottom: 1em; padding-left: 1em; }\n    </style>\n    <rect width=\"100\" height=\"100\" class=\"st0\" style=\"stroke-width:3;margin-top:1em;margin-right:1em;margin-bottom:1em;margin-left:1em\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- No changes needed when there's only one style element -->
    <style>.st0{ fill:red; padding-top: 1em; padding-right: 1em; padding-bottom: 1em; padding-left: 1em; }</style>
    <rect width="100" height="100" class="st0" style="stroke-width:3;margin-top:1em;margin-right:1em;margin-bottom:1em;margin-left:1em"></rect>
</svg>
